charts/factory/manuela-staging/templates/line-dashboard/line-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: line-dashboard
    template: openjdk18-web-basic-s2i
    app.kubernetes.io/part-of: ManuELA
  name: line-dashboard
  namespace: manuela-staging-line-dashboard
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deploymentconfig: line-dashboard
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: line-dashboard
        deploymentconfig: line-dashboard
      name: line-dashboard
    spec:
      containers:
      - name: line-dashboard
        image: line-dashboard:0.3.1-81
        #imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        # the following mountpath is used for images which are based on the HTTPD base images, i.e. built using the CI/CD pipelines
        - mountPath: /var/www/html/conf
          name: line-dashboard-configmap-vol
        # the following mountpath is used for images based directly on the NodeJS builder image, i.e. when deploying images built in the iotdemo namespace during quickstart
        - mountPath: /opt/app-root/output/conf/config.json
          name: line-dashboard-configmap-vol
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        livenessProbe: 
          httpGet:   
            path: /home
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15  
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /home
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
      volumes:
      - name: line-dashboard-configmap-vol
        configMap:
          defaultMode: 438
          name: line-dashboard-configmap
